Closed Bug 1367452 Opened 7 years ago Closed 7 years ago

Intermittent Assertion failed: false, file c:/builds/moz2_slave/gfx-w64-d-00000000000000000000/build/src/gfx/angle/src/libANGLE/renderer/d3d/SurfaceD3D.cpp, line 259

Categories

(Core :: Graphics: WebRender, defect)

55 Branch
x86_64
Windows
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla55
Tracking Status
firefox55 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: sotaro)

References

Details

(Keywords: intermittent-failure, Whiteboard: gfx-noted)

Attachments

(1 file, 1 obsolete file)

Note that only the debug jobs have this assertion, the opt job seems to be behaving as before (no crash, but reftest failures)
OS: Unspecified → Windows
Hardware: Unspecified → x86_64
Version: unspecified → 55 Branch
Whiteboard: gfx-noted
The assertion failure might be a result of something else. On IRC jeff said that it might happen if the window goes away. There is another assertion in the log, at [1], although that happens later in the log. I assumed that was a result of the previous exception but I don't really know. I would think that both assertions would happen in the GPU process though.

[1] http://searchfox.org/mozilla-central/rev/6c2dbacbba1d58b8679cee700fd0a54189e0cf1b/gfx/layers/wr/WebRenderBridgeParent.cpp#676
I can't reproduce the assertion on a local debug win64-qr build.
I could not reproduce the same assertion, but I could reproduce the following assertion

err: rx::SurfaceD3D::resizeSwapChain(165): 	! Assert failed in rx::SurfaceD3D::resizeSwapChain(165): backbufferWidth >= 0 && backbufferHeight >= 0
Assertion failed: backbufferWidth >= 0 && backbufferHeight >= 0, file c:/quantum_gfx_src_1/graphics/gfx/angle/src/libANGLE/renderer/d3d/SurfaceD3D.cpp, line 165
Assignee: nobody → sotaro.ikeda.g
Comment on attachment 8873350 [details] [diff] [review]
patch - Prevent ClientSize becomes minus value

Sorry, I posted a patch to a wrong bug.
Attachment #8873350 - Attachment is obsolete: true
Assignee: sotaro.ikeda.g → nobody
Assignee: nobody → sotaro.ikeda.g
It seems to be trigered by parent window destroy. When parent windows was destroyed, child windows was automatically destroyed.

http://searchfox.org/mozilla-central/source/widget/windows/nsWindow.cpp#984
attachment 8875275 [details] [diff] [review] addressed "SurfaceD3D.cpp, line 259" assert failure.
Attachment #8875275 - Flags: review?(jmuizelaar)
Attachment #8875275 - Flags: review?(jmuizelaar) → review+
Pushed by sikeda@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/16fbe02d5cb5
Add DestroyLayerManager() to WM_DESTROY message r=jrmuizel
https://hg.mozilla.org/mozilla-central/rev/16fbe02d5cb5
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
My latest try push on Windows with QR forced on no longer has this crash. Verifying as fixed.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: