Bug 1367452 - Add DestroyLayerManager() to WM_DESTROY message r=jrmuizel